--- a/apnidukaan/pyrightconfig.json
+++ b/apnidukaan/pyrightconfig.json
@@ -1,5 +1,6 @@
 {
     "typeCheckingMode": "basic",
-    "reportAttributeAccessIssue": false
+    "reportAttributeAccessIssue": false,
+    "reportGeneralTypeIssues": "none"
   }
   
